@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Changed: Corrected logic when adding an assisted Shared Note when "Editing" an existing Census event. (windmillway)
  - Merged: Merge changes r6536 - r6537 from the trunk. (windmillway)
  - Merged: Merge changes r6529 - r6535 from the trunk. (windmillway)
  - Changed: The Process of copying the Census Event to the multiple Indi id's stipulated in the assisted Shared Note window is now automated. Requires Trunk svn 6535 (windmillway)
